--- a/microservicio-python/docker-compose.yml
+++ b/microservicio-python/docker-compose.yml
@@ -8,7 +8,10 @@ services:
       MYSQL_USER: python
       MYSQL_PASSWORD: python
     volumes:
+      - ./init_db.sql:/docker-entrypoint-initdb.d/init_db.sql
       - db_data:/var/lib/mysql
+    ports:
+      - "3306:3306"
 
   web:
     build: .
