--- a/api-controller/nginx.conf
+++ b/api-controller/nginx.conf
@@ -1,1 +1,21 @@
-# nginx.conf
+worker_processes 1;
+
+events { worker_connections 1024; }
+
+http {
+    server {
+        listen 80;
+
+        location / {
+            proxy_pass http://static_html:80;
+        }
+
+        location /flask {
+            proxy_pass http://flask_service:5000;
+        }
+
+        location /node {
+            proxy_pass http://express_service:3000;
+        }
+    }
+}
