--- a/microservicio-node/Dockerfile
+++ b/microservicio-node/Dockerfile
@@ -4,7 +4,12 @@ WORKDIR /app
 
 COPY package.json .
 RUN npm install
+RUN npm install mongoose
+RUN npm install winston
+
 
 COPY . .
 
-CMD ["node", "app.js"]
+EXPOSE 3000
+
+CMD ["node", "--trace-warnings", "app.js"]
