--- a/api-controller/nginx.conf
+++ b/api-controller/nginx.conf
@@ -7,15 +7,15 @@ http {
         listen 80;
 
         location / {
-            proxy_pass http://static_html:80;
+            proxy_pass http://frontend:80;
         }
 
         location /flask {
-            proxy_pass http://flask_service:5000;
+            proxy_pass http://microservicio-python:5000;
         }
 
         location /node {
-            proxy_pass http://express_service:3000;
+            proxy_pass http://microservicio-node:3000;
         }
     }
 }
