--- a/api-controller/nginx.conf
+++ b/api-controller/nginx.conf
@@ -1,4 +1,3 @@
-# nginx.conf
 worker_processes 1;
 
 events { worker_connections 1024; }
@@ -7,22 +6,43 @@ http {
     server {
         listen 80;
 
+        root /usr/share/nginx/html;
+        index index.html;
+
         location / {
-            root /usr/share/nginx/html;
-            index index.html;
             try_files $uri $uri/ /index.html;
         }
 
-        location /assets/ {
-            root /usr/share/nginx/frontend;
-            proxy_pass http://frontend:80;
-        }
-
-        location /flask {
+        location /flask/ {
             proxy_pass http://microservicio-python:5000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /node {
+        location /node/ {
             proxy_pass http://microservicio-node:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
+
+        error_page 404 /404.html;
+        location = /404.html {
+            root /usr/share/nginx/html;
+            internal;
+        }
+
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /usr/share/nginx/html;
+            internal;
+        }
+
+        add_header X-Content-Type-Options nosniff;
+        add_header X-XSS-Protection "1; mode=block";
+        add_header X-Frame-Options "SAMEORIGIN";
     }
+}
