--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,21 +18,17 @@ services:
       - MONGO_URI=mongodb://mongo:27017/microservicioNode
     depends_on:
       - mongo
-    expose:
-      - "80"
     networks:
       - backend
 
   frontend:
     build: ./frontend
     container_name: frontend
-    ports:
-      - "80:80"
-    networks:
-      - frontend_network
     depends_on:
       - flask_service
       - express_service
+    networks:
+      - frontend_network
 
   nginx:
     image: nginx:alpine
@@ -42,7 +38,10 @@ services:
     ports:
       - "8080:80"
     depends_on:
-      - frontend
+      - flask_service
+      - express_service
+    expose:
+      - 8080
     networks:
       - frontend_network
       - backend
@@ -80,6 +79,3 @@ networks:
     driver: bridge
   backend:
     driver: bridge
-
-volumes:
-  db_data:
