--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "react-icons": "^4.0.0",
+    "react-chartjs-2": "^4.0.0", 
+    "chart.js": "^3.8.0",
+    "react-router-dom": "^6.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
