--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,10 +25,12 @@ http {
         }
 
         location /flask {
+            rewrite ^/flask(/.*)$ $1 break;
             proxy_pass http://microservicio-python:5000;
         }
 
         location /node {
+            rewrite ^/node(/.*)$ $1 break;
             proxy_pass http://microservicio-node:3000;
         }
 
