--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,11 +57,14 @@ services:
     container_name: mongo
     ports:
       - "27017:27017"
+    volumes:
+      - mongo_data:/data/db
     networks:
       - backend
 
 volumes:
-  db_data:
+  db_data: {}
+  mongo_data: {}
 
 networks:
   frontend_network:
