--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,6 +9,8 @@ RUN npm install
 # Copiar el resto de los archivos de la aplicación
 COPY . .
 
+COPY openapi*.yaml ./
+
 # Construir la aplicación React
 RUN npm run build
 
@@ -17,6 +19,8 @@ FROM nginx:1.19.0-alpine AS prod-stage
 
 # Copiar los archivos de la construcción al directorio adecuado de Nginx
 COPY --from=build /app/build /usr/share/nginx/html
+
+COPY --from=build /app/openapiFlask.yaml /app/openapiNode.yaml /usr/share/nginx/html/
 
 # Exponer el puerto 80
 EXPOSE 80
