--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - "3000:3000"
     environment:
       - MONGO_URI=mongodb://mongo:27017/microservicioNode
+      - JWT_SECRET=sdfsdfbvcxbc324234sdgdszfgGFD
     depends_on:
       - mongo
     networks:
@@ -45,7 +46,6 @@ services:
       MYSQL_USER: python
       MYSQL_PASSWORD: python
     volumes:
-      - ./init_db.sql:/docker-entrypoint-initdb.d/init_db.sql
       - db_data:/var/lib/mysql
     ports:
       - "3306:3306"
