--- a/microservicio-node/package.json
+++ b/microservicio-node/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "main": "app.js",
     "dependencies": {
+        "jsonwebtoken": "^8.5.1",
         "express": "^4.17.1",
         "express_service": "file:"
     }
